--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-5">
                 <li class="nav-item mx-5">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item mx-5">
-                    <a class="nav-link" href="#">Membership</a>
+                    <a class="nav-link" href="/membership.html">Membership</a>
                 </li>
                 <li class="nav-item mx-5">
                     <a class="nav-link" href="#schedule">Schedule</a>
                 </li>
                 <li class="nav-item mx-5">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
             </ul>
         
@@ -365,12 +365,16 @@
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <!-- Content -->
-                    <h6 class="text-uppercase fw-bold mb-4">
-                        <i class="fas fa-gem me-3"></i>Earthbound Rock Climbing
+                    <h6 class="text-uppercase fw-bold mb-4 text-center">
+                        Visit Us
                     </h6>
-                    <p>
-                        *MAP*
-                    </p>
+                    <!--Google map-->
+                    <div id="map-container-google-2" class="z-depth-1-half map-container">
+                        <iframe src="https://maps.google.com/maps?q=chicago&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                            style="border:0; border-radius: 8px; height: 175px" allowfullscreen></iframe>
+                    </div>
+                    
+                    <!--Google Maps-->
                 </div>
                 <!-- Grid column -->
 
