minor adjustments to color and layout

--- a/about.html
+++ b/about.html
@@ -86,19 +86,24 @@
     <div class="container-fluid d-flex mt-5 p-5">
         <div class="row mt-5 text-center d-flex justify-content-center">
             <div class="col-md-6">
-                <h1 class="display-4 m-2 mb-3">About Earthbound</h1>
-                <p>
+                <h1 class="display-4 m-2 mb-3" style="color:rgba(23, 155, 111, 0.85)">About Earthbound</h1>
+                <p class="fw-bold text-start">
                     Our mission: to share our love for climbing with everyone, to connect people through movement, and to create welcoming,
                     uplifting spaces that strengthen minds, bodies, and communities.
+                </p>   
+                <p class="text-start">  
                     Why do we love climbing so much? For starters, climbing is exhilarating and fun. It’s an amazing full-body workout that
                     doesn’t feel like a workout until the minute you’re done. Climbing brings people together. When movement creates
                     connection, something magical happens. There’s energy in the air. You can feel it. Climbing feeds your adventurous
                     spirit. It engages all of you – mind, body, and soul.
                 </p>
-                <p>
+                <p class="text-start">
                     We love climbing and we love sharing it with others, so we build world-class climbing gyms with thrilling terrain and
                     climbs set for all ability levels – from new climbers to seasoned experts. Even if you’ve never climbed before, you will
-                    be welcomed when you walk into a First Ascent gym. The climbing community is unlike any other, and First Ascent strives
+                    be welcomed when you walk into a Earthbound gym. 
+                </p>    
+                <p class="text-start">
+                    The climbing community is unlike any other, and Earthbound strives
                     to be a gym like no other. You won’t see everyone wearing headphones and living in their own world. You’ll see
                     connection, people cheering each other on, and strangers becoming friends.
                 </p>
