--- a/index.html
+++ b/index.html
@@ -290,13 +290,17 @@
 </div>
 
 <!-- PRICING -->
-
-<div class="row row-cols-md-3 g-4 m-1">
+    <h1 class="text-center mt-5 mx-3 border text-light pt-3 pb-3"
+        style="background-color: rgba(100, 2, 199, 0.8); border-radius: 8px;" id="schedule">Pricing</h1>
+    <div class="timetable-img text-center">
+        <img src="img/content/timetable.png" alt="">
+    </div>
+<div class="row row-cols-md-3 g-4 mt-0 m-1 mb-5">
     <div class="col">
         <div class="card">
             <img src="Images/viktor-bystrov-oyPLmauJzzo-unsplash.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center">Adult Climb</h5>
+            <div class="card-body text-white" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; background-color: #f0d002;">
+                <h5 class="card-title text-center display-5">Adult Climb</h5>
                 <p class="card-text"></p>
             </div>
         </div>
@@ -304,8 +308,8 @@
     <div class="col">
         <div class="card">
             <img src="/Images/rahadiansyah-pjHfslqy01o-unsplash.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title text-center">Kids Climb</h5>
+            <div class="card-body text-white" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; background-color:#00C2C7;">
+                <h5 class="card-title text-center display-5">Kids Climb</h5>
                 <p class="card-text"></p>
             </div>
         </div>
@@ -313,20 +317,14 @@
         <div class="col">
             <div class="card">
                 <img src="/Images/bastien-plu-tOD7vx8YiRw-unsplash.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Family Climb</h5>
+                <div class="card-body bg-primary text-white" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
+                    <h5 class="card-title text-center display-5">Family Climb</h5>
                     <p class="card-text"></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<!-- LOCATION & HOURS -->
-
-<!-- GALLERY -->
-
-<!-- FOOTER -->
 
 <!-- Footer -->
 <footer class="text-center text-lg-start footer-dark text-light" style="background-color: rgba(68, 165, 127,0.8);">
